--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,18 +1,40 @@
 server:
   servlet:
     context-path: /
-  port: 8085
+  port: 5000
 spring:
   application:
     name: service--payment
+  profiles:
+    active: ${SPRING_PROFILES_ACTIVE:dev}
   mvc:
-    throw-exception-if-no-handler-found: true
-  resources:
-    add-mappings: false
+    pathmatch:
+      matching-strategy: ant_path_matcher
   main:
     banner-mode: 'OFF'
-  profiles:
-    active: ${SPRING_PROFILES_ACTIVE:default}
+  config:
+    import: "configserver:${CONFIG_SERVER:http://localhost:8888/config/}"
+  cloud:
+    allow-override: true
+    config:
+      username: develop
+      password: develop
+      name: "service--payment"
+      label: master
+    retry:
+      max-attempts: 5000
+      initial-interval: 1500
+      multiplier: 1.5
+      compatibility-verifier:
+        enabled=false:
+
+info:
+  app:
+    name: "@project.name@"
+    version: "@project.version@"
+    description: "@project.description@ "
+    base-package: "com.shoesclick.service.payment"
+
   jpa:
     properties:
       hibernate:
@@ -70,3 +92,28 @@ eureka:
       defaultZone: http://localhost:8762/eureka/
   instance:
     prefer-ip-address: 'true'
+
+management:
+  server:
+    port: 9090
+  endpoints:
+    web:
+      base-path: /actuator
+      exposure:
+        include: health, shutdown, prometheus
+  endpoint:
+    shutdown:
+      enabled: true
+      health:
+        show-details: always
+        probes:
+          enabled: true
+        group:
+          readiness:
+            include: diskSpace
+
+opentracing:
+  service-name: bff-site-shoes-app
+  jaeger:
+    http-sender:
+      url: ${JAEGER_HOST:http://jaeger-collector.istio-system.svc.cluster.local:14268/api/traces
