--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -71,7 +71,7 @@ management:
             include: diskSpace
 
 opentracing:
-  service-name: bff-site-shoes-app
+  service-name: service--payment
   jaeger:
     http-sender:
       url: ${JAEGER_HOST:http://jaeger-collector.istio-system.svc.cluster.local:14268/api/traces
