Ajuste na pipeline para deixar o docker repository generico

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -15,12 +15,12 @@ spec:
     spec:
         containers:
           - name: service--payment-container
-            image: $awsaccountid.dkr.ecr.$awseksregion.amazonaws.com/$awsecrrepository:service--payment-$githash
+            image: $dck-accountid/$dck-repository:service--payment-$githash
             env:
               - name: SPRING_PROFILES_ACTIVE
                 value: "dev"
               - name: CONFIG_SERVER
-                value: "http://svc-swapiconfigserver.corporativo.svc.cluster.local/config/"
+                value: "http://svc-swapiconfigserver.shoes-eks.svc.cluster.local/config/"
             ports:
               - containerPort: 5000
               - containerPort: 9090
