ajuste na url do config server criacao de variavel de ambiente

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -21,6 +21,12 @@ spec:
                 value: "dev"
               - name: CONFIG_SERVER
                 value: "http://svc-server--config-service.shoes-eks.svc.cluster.local:8888/config/"
+              - name: LOGIN_HOST
+                value: "http://svc-login.ns-login.svc.cluster.local:7080"
+              - name: MYSQL_HOST
+                value: "mysql.ns-infra.svc.cluster.local"
+              - name: CACHE_HOST
+                value: "redis.ns-infra.svc.cluster.local"
             ports:
               - containerPort: 5000
               - containerPort: 9090
