--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -33,6 +33,12 @@ spec:
                 value: "kafka-broker.ns-infra.svc.cluster.local"
               - name: SCHEMA_REGISTRY_HOST
                 value: "schema-registry.ns-infra.svc.cluster.local"
+              - name: API_CUSTOMER_URL
+                value: "http://api--customer.shoes-eks.svc.cluster.local:5000"
+              - name: API_PRODUCT_URL
+                value: "http://api--product.shoes-eks.svc.cluster.local:5000"
+              - name: API_ORDER_URL
+                value: "http://api--order.shoes-eks.svc.cluster.local:5000"
             ports:
               - containerPort: 5000
               - containerPort: 9090
