--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -67,4 +67,4 @@ opentracing:
   service-name: service--payment
   jaeger:
     http-sender:
-      url: ${JAEGER_HOST:http://jaeger-collector.istio-system.svc.cluster.local:14268/api/traces
+      url: ${JAEGER_HOST:http://jaeger-collector.monitoracao.svc.cluster.local:14268/api/traces
