--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,11 @@
 		</dependency>
 
 		<dependency>
+			<groupId>io.opentracing.contrib</groupId>
+			<artifactId>opentracing-spring-jaeger-cloud-starter</artifactId><version>3.1.2</version>
+		</dependency>
+
+		<dependency>
 			<groupId>io.github.resilience4j</groupId>
 			<artifactId>resilience4j-spring-boot3</artifactId>
 			<version>2.1.0</version>
