Commit irrelevante para entrega inclusao do jaeger para trace distribuido

--- a/pom.xml
+++ b/pom.xml
@@ -136,13 +136,14 @@
 		</dependency>
 
 		<dependency>
-			<groupId>io.micrometer</groupId>
-			<artifactId>micrometer-tracing-bridge-otel</artifactId>
+			<groupId>io.opentelemetry</groupId>
+			<artifactId>opentelemetry-api</artifactId>
 		</dependency>
 
 		<dependency>
 			<groupId>io.opentelemetry</groupId>
-			<artifactId>opentelemetry-exporter-otlp</artifactId>
+			<artifactId>opentelemetry-exporters-jaeger</artifactId>
+			<version>0.9.1</version>
 		</dependency>
 
 		<dependency>
