--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -44,6 +44,12 @@ feign:
         readTimeout: 5000
         loggerLevel: basic
 
+logging:
+  level:
+    org.springframework.web: DEBUG
+  pattern:
+    level: "%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
+
 management:
   server:
     port: 9190
