--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,7 @@
 		<dependency>
 			<groupId>io.opentelemetry</groupId>
 			<artifactId>opentelemetry-api</artifactId>
+			<version>1.25.0</version>
 		</dependency>
 
 		<dependency>
