--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
 		<spring.data.redis.version>2.5.1</spring.data.redis.version>
 		<jedis.version>3.6.0</jedis.version>
+		<logbook.version>3.6.0</logbook.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -136,15 +137,29 @@
 		</dependency>
 
 		<dependency>
-			<groupId>io.opentelemetry</groupId>
-			<artifactId>opentelemetry-api</artifactId>
-			<version>1.25.0</version>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-tracing</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.micrometer</groupId>
+			<artifactId>micrometer-tracing-bridge-brave</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>io.zipkin.reporter2</groupId>
+			<artifactId>zipkin-reporter-brave</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.zalando</groupId>
+			<artifactId>logbook-spring-boot-starter</artifactId>
+			<version>${logbook.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>io.opentelemetry</groupId>
-			<artifactId>opentelemetry-exporters-jaeger</artifactId>
-			<version>0.9.1</version>
+			<artifactId>opentelemetry-api</artifactId>
 		</dependency>
 
 		<dependency>
