Commit irrelevante para entrega:
Ajustes nos arquivos k8s para contemplar o log;

Ajustes nos arquivos k8s para performance inserindo memoria e cpu.

Ajustes nos arquivos Dockerfile para ajuste de memoria na jvm

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -18,7 +18,7 @@ spec:
             image: $dck-accountid/$dck-repository:service--payment-$githash
             env:
               - name: SPRING_PROFILES_ACTIVE
-                value: "dev"
+                value: "dev,jsonlog"
             ports:
               - containerPort: 5000
               - containerPort: 9190
@@ -38,3 +38,10 @@ spec:
               initialDelaySeconds: 120
               periodSeconds: 10
               timeoutSeconds: 10
+            resources:
+              limits:
+                memory: "600Mi"
+                cpu : "400Mi"
+              requests:
+                memory: "400Mi"
+                cpu: "270Mi"
